--- a/application/views/scripts/projetos/editar.phtml
+++ b/application/views/scripts/projetos/editar.phtml
@@ -17,26 +17,27 @@ else :
     
             <label>Nome do Projeto: 
                 <input type="text" id="nome" name="nome"size="60px" /><br/>
-            </label><br />
+            </label><br /><br/>
 
-    <label>Descrição: 
-        <input type="text" id="descricao" name="descricao" value="<?= $this->projeto->descricao ?>" />
+    
+    <label>Data Inicio: 
+                <label id="dataFim">Data Final (Previs&atilde;o): <br/>
+                <input type="text" id="dataInicio" name="dataInicio" size="14px" value="<?= $this->projeto->datainicio ?>"/></label>
+     
+                <input type="text" id="dataPrevFim" name="dataPrevFim" size="14px" value="<?= $this->projeto->dataprevfim ?>" /></label><br /> <br/>
+
+     <label>Descrição: <br/>
+        <textarea type="text" id="descricao" name="descricao" rows="5" cols="60  value="<?= $this->projeto->descricao ?>"> </textarea>
     </label>
-    <br /> 
-    <label>Data Início: 
-        <input type="text" id="dataInicio" name="dataInicio" value="<?= $this->projeto->datainicio ?>" />
-    </label>
-    <br />
-    <label>Data Fim(Previsão): 
-        <input type="text" id="dataPrevFim" name="dataPrevFim" value="<?= $this->projeto->dataprevfim ?>" />
-    </label>
-    <br /> 
-    <label>Repositório: 
+    <br /> <br/>            
+                
+    <label>Repositório: <br/>
         <input type="text" id="repositorio" name="repositorio" value="<?= $this->repositorio->endereco ?>" />
     </label>
-    <br />
+    <br /><br/>
     
-    <input type="submit" value="Atualizar" />
+    
+    <input id="salvar" type="submit" value="Atualizar" />
     </fieldset>
 </form>
 
