--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,7 +13,7 @@
     <body>
         <div id="header">
             <img src="/imagens/logo.png" width="145px" height="75px"/>
-            <div id="login">
+            <div id="loginX">
                     <a href="#"><?= $this->usuarioLogado->nome ?></a> | <a href="/login/logout">logout</a>
                     <br><a href="#"><img src="/imagens/Brazil-icon.png"/></a>
                     <a href="#"><img src="/imagens/France-icon.png"/></a>
