--- a/application/views/scripts/usuarios/listar.phtml
+++ b/application/views/scripts/usuarios/listar.phtml
@@ -32,7 +32,7 @@
                     )
                     ); 
             ?>" 
-            title="Visualizar"><img src="/imagens/Zoom-icon.png"/>
+            title="Visualizar"><img src="/imagens/search_lense.png"/>
         </a>
         </td>
         <td>
@@ -44,7 +44,7 @@
                     )
                     ); 
             ?>" 
-            title="Editar"><img src="/imagens/31.png"/>
+            title="Editar"><img src="/imagens/pencil_edit.png"/>
         </a>
         </td>
         <td>
@@ -56,7 +56,7 @@
                     )
                     ); 
             ?>" 
-            title="Remover"><img src="/imagens/118.png"/>
+            title="Remover"><img src="/imagens/delete_2.png"/>
         </a>
         </td>
     </tr>
