--- a/application/views/scripts/usuarios/editar.phtml
+++ b/application/views/scripts/usuarios/editar.phtml
@@ -1,3 +1,5 @@
+<?php echo $this->headLink()->appendStylesheet('/css/cadastroUsuarios.css');?>
+
 <?php
 if ($this->mensagemErro): 
     echo $this->mensagemErro;
@@ -11,60 +13,67 @@ else :
     <input type="hidden" name="idUsuario" value="<?= $this->usuario->idusuario ?>" />
     <input type="hidden" name="idEndereco" value="<?= $this->usuario->endereco ?>" />
     <input type="hidden" name="idLogin" value="<?= $this->login->idlogin ?>" />
-    <label>Nome: 
-        <input type="text" id="nome" name="nome" value="<?= $this->usuario->nome ?>" />
-    </label>
-    <br /> 
-    <label>Data Nascimento:
-        <input type="text" id="dataNasc" name="dataNasc" value="<?= $this->usuario->datanasc ?>" />
-    </label>
-    <br /> 
-    <label>Sexo: 
-        <input type="text" id="sexo" name="sexo" value="<?= $this->usuario->sexo ?>" />
-    </label>
-    <br />
-    <label>CPF: 
-        <input type="text" id="cpf" name="cpf" value="<?= $this->usuario->cpf ?>" />
-    </label>
-    <br /> 
-    <label>Telefone: 
-        <input type="text" id="telefone" name="telefone" value="<?= $this->usuario->telefone ?>" />
-    </label>
-    <br /> 
-    <label>E-mail: 
-        <input type="text" id="email" name="email" value="<?= $this->usuario->email ?>" />
-    </label>
-    <br /> 
-    <label>Login: 
-        <input type="text" id="login" name="login" value="<?= $this->login->login ?>" />
-    </label>
-    <br /> 
-    <label>Rua: 
-        <input type="text" id="rua" name="rua" value="<?= $this->endereco->rua ?>" />
-    </label>
-    <br /> 
-    <label>Numero: 
-        <input type="text" id="num" name="num" value="<?= $this->endereco->num ?>" />
-    </label>
-    <br /> 
-    <label>Bairro: 
-        <input type="text" id="bairro" name="bairro" value="<?= $this->endereco->bairro ?>" />
-    </label>
-    <br />
-    <label>Complemento: 
-        <input type="text" id="complemento" name="complemento" value="<?= $this->endereco->complemento ?>" />
-    </label>
-    <br /> 
-    <label>Cidade: 
-        <input type="text" id="cidade" name="cidade" value="<?= $this->endereco->cidade ?>" />
-    </label>
-    <br /> 
-    <label>Estado: 
-        <input type="text" id="estado" name="estado" value="<?= $this->endereco->estado ?>" />
-    </label>
-    <br /> 
+    
+    <fieldset id="pessoal">
+            <legend>Informa&ccedil;&otilde;es pessoais</legend>
 
-    <input type="submit" value="Atualizar" />
+            <label>Nome do Usu&aacute;rio: <br/>
+                <input type="text" id="nome" name="nome" size="60px" value="<?= $this->usuario->nome ?>"/>
+            </label>
+            <br/><br/>
+
+            <label>Data de Nascimento:
+            <label style="margin-left: 3%">Sexo:<br/>
+                <input type="text" id="dataNasc" name="dataNasc" size="14" value="<?= $this->usuario->datanasc ?>"/>
+            </label>
+
+            <select id="sexo" name="sexo" value="<?= $this->usuario->sexo ?>"> 
+            <option value="M">Masculino</option>
+            <option value="F">Feminino</option>
+            </select> </label><br/><br/>
+
+            <label>CPF
+            <label style="margin-left: 33.5%">Telefone:<br/>
+            <input type="text" id="cpf" name="cpf" value="<?= $this->usuario->cpf ?>"/></label>
+            <input type="text"id="telefone" name="telefone" value="<?= $this->usuario->telefone ?>"/></label><br/><br/>
+
+            <label>E-mail:<br/>
+            <input type="text" id="email" name="email" size="60px" value="<?= $this->usuario->email ?>"/></label><br></br>
+
+
+            <label> Login do Usu&aacute;rio:<br/>
+            <input type="text" id="login" name="login" value="<?= $this->login->login ?>"/></label>
+
+        </fieldset>
+
+        <fieldset id="endereco">
+            <legend>Endere&ccedil;o</legend>
+
+            <label>Rua:
+            <label style="margin-left: 65%">N&uacute;mero:<br>
+            <input type="text" id="rua" name="rua" size="40px" value="<?= $this->endereco->rua ?>"/></label>
+            <input type="text" id="num" name="num" size="5px" value="<?= $this->endereco->num ?>"/></label><br></br>
+
+            <label>Bairro: 
+            <label style="margin-left: 30.5%">Complemento<br>
+            <input type="text" id="bairro" name="bairro"  value="<?= $this->endereco->bairro ?>"/></label>
+            <input type="text" id="complemento" name="complemento" value="<?= $this->endereco->complemento ?>"/> </label><br><br>
+
+            <label>Cidade: 
+            <label style="margin-left: 29.5%">Estado:<br>
+            <input type="text" id="cidade" name="cidade"  value="<?= $this->endereco->cidade ?>"/></label>
+
+            <select id="estado" name="estado" value="<?= $this->endereco->estado ?>">
+                <?php 
+                foreach ($this->estados as $estado) 
+                    echo "<option value\"$estado\">$estado</option>";
+                ?>
+            </select></label> <br></br>
+
+            <input id="cancelar" type="reset" value="Cancelar"/>
+            <input id="salvar" type="submit" value="Salvar"/>
+            
+        </fieldset>
 </form>
 
 <?php
