--- a/public/css/detalharProjeto.css
+++ b/public/css/detalharProjeto.css
@@ -100,5 +100,18 @@ b {
     float: right;
 }
 
+#icones{
+    margin-left: 340px;
+    margin-top: -20px;
+    margin-bottom: -10px;
+    float: right;
+}
+
+#icones li {
+    margin-right: 1px;
+    display: inline;
+    float: left;
+    list-style: none;
+}
 
 
