alteração em desalocar (correção para listar os usuarios de forma correta)

--- a/application/views/scripts/projetos/desalocar-colaborador.phtml
+++ b/application/views/scripts/projetos/desalocar-colaborador.phtml
@@ -4,7 +4,7 @@
         <select id="usuario" name="usuario">
             <?php 
             foreach($this->vUsuarioProjeto as $usuarioProjeto)
-                if ($usuarioProjeto->datafimusuario==null || $usuarioProjeto->datafimusuario>date('Y-m-d'))
+                if ($usuarioProjeto->datafimusuario==null || $usuarioProjeto->datafimusuario>time('Y-m-d'))
                 echo "<option value=\"$usuarioProjeto->idusuario\">$usuarioProjeto->nomeusuario</option>";
             ?>
         </select>     
