--- a/application/views/scripts/projetos/alocar-colaborador.phtml
+++ b/application/views/scripts/projetos/alocar-colaborador.phtml
@@ -16,8 +16,10 @@ else:
                 if ($usuarioProjeto->datafimusuario!=null && $usuarioProjeto->datafimusuario<=time('Y-m-d')){
             ?>
             <option value="<?= $usuarioProjeto->idusuario ?>"><?= $usuarioProjeto->nomeusuario ?></option>
-            <?php } endforeach; ?>
-            <?php foreach ($this->usuarios as $usuario):
+            <?php 
+            } 
+            endforeach;
+            foreach ($this->usuarios as $usuario):
             ?>
             <option value="<?= $usuario->idusuario ?>"><?= $usuario->nome ?></option>
             <?php endforeach; ?>
