--- a/application/views/scripts/login/redefinir.phtml
+++ b/application/views/scripts/login/redefinir.phtml
@@ -1,6 +1,6 @@
 <div id="geral">
     <form action="loginRed" method="post">
-        <label>Email
+        <label>Email:
             <br />
             <input type="text" name="email" size="50" placeholder="Digite seu email"/>
         </label>
