correção em alocar (nao estava alocando usuario que ja estava desalocado)

--- a/application/views/scripts/projetos/alocar-colaborador.phtml
+++ b/application/views/scripts/projetos/alocar-colaborador.phtml
@@ -1,13 +1,13 @@
 <?php
-if ($this->mensagem): 
-?>
-<p><?=$this->mensagem?></p>
-<a href='/projetos/alocar-colaborador/idprojeto/<?= $this->idProjeto ?>' title="Alocar outro colaborador">Alocar outro usuário</a>
+//if ($this->mensagem): 
+//?>
+<!--<p>//<?=$this->mensagem?></p>
+<a href='/projetos/alocar-colaborador/idprojeto///<?= $this->idProjeto ?>' title="Alocar outro colaborador">Alocar outro usuário</a>
 <br />
-<a href='/projetos/listar' title="Voltar">Voltar</a>
+<a href='/projetos/listar' title="Voltar">Voltar</a>-->
 <?php
-else: 
-?>
+//else: 
+//?>
 
 <form action="alocar-colaborador" method="post">
     <label>Usuarios: 
@@ -35,5 +35,5 @@ else:
     <input type="submit" value="Alocar" />
 </form>
 <?php
-endif;
-?>
+//endif;
+//?>
