--- a/application/views/scripts/projetos/novo.phtml
+++ b/application/views/scripts/projetos/novo.phtml
@@ -28,8 +28,8 @@ else:
                 Data Final (Previs&atilde;o):
             </label>
             <br/>
-            <input type="text" id="dataInicio" name="dataInicio" size="14px" />
-            <input type="text" id="dataPrevFim" name="dataPrevFim" size="14px" />
+            <input type="text" class="datepicker" id="dataInicio" name="dataInicio" size="14px" />
+            <input type="text" class="datepicker" id="dataPrevFim" name="dataPrevFim" size="14px" />
             <br />
             <br />
 
