correção da ação dos icones em detalhar projetos (nao estava redirecionando)

--- a/application/views/scripts/projetos/detalhar-projeto.phtml
+++ b/application/views/scripts/projetos/detalhar-projeto.phtml
@@ -97,7 +97,7 @@
                     <?php 
                     echo $this->url(array('controller' => 'projetos', 
                                         'action'     => 'editar', 
-                                        'idprojeto' => $projeto->idprojeto
+                                        'idprojeto' => $this->projeto->idprojeto
                             )
                             ); 
                     ?>" 
@@ -108,7 +108,7 @@
                     <?php 
                     echo $this->url(array('controller' => 'projetos', 
                                         'action'     => 'remover', 
-                                        'idprojeto' => $projeto->idprojeto
+                                        'idprojeto' => $this->projeto->idprojeto
                             )
                             ); 
                     ?>" 
@@ -119,7 +119,7 @@
                         <?php 
                         echo $this->url(array('controller' => 'projetos', 
                                             'action'     => 'fechar', 
-                                            'idprojeto' => $projeto->idprojeto
+                                            'idprojeto' => $this->projeto->idprojeto
                                 )
                                 ); 
                         ?>" 
@@ -130,7 +130,7 @@
                         <?php 
                         echo $this->url(array('controller' => 'projetos', 
                                             'action'     => 'alocar-colaborador', 
-                                            'idprojeto' => $projeto->idprojeto
+                                            'idprojeto' => $this->projeto->idprojeto
                                 )
                                 ); 
                         ?>" 
@@ -141,7 +141,7 @@
                     <?php 
                     echo $this->url(array('controller' => 'projetos', 
                                         'action'     => 'desalocar-colaborador', 
-                                        'idprojeto' => $projeto->idprojeto
+                                        'idprojeto' => $this->projeto->idprojeto
                             )
                             ); 
                     ?>" 
