Alteraçao campo form adicionar tempo alteraçao titulos dos icones (alguns estavam incorretos)

--- a/application/views/scripts/projetos/adicionar-tempo.phtml
+++ b/application/views/scripts/projetos/adicionar-tempo.phtml
@@ -12,8 +12,10 @@
             ?>
         </select> <br />
     </label>
-    <label>Dias: <input type="text" id="dias" name="dias" value="0" /></label><br />
+<!--    <label>Dias: <input type="text" id="dias" name="dias" value="0" /></label><br />
     <label>Horas: <input type="text" id="horas" name="horas" value="0" /></label><br />
-    <label>Minutos: <input type="text" id="minutos" name="minutos" value="0" /></label><br />     
+    <label>Minutos: <input type="text" id="minutos" name="minutos" value="0" /></label><br />     -->
+    <label>Tempo: <input type="text" id="horas" name="horas" value="0" /></label><br />
+    <p>Fomatos válidos:<br/> 3 dias <br/> 03:40:00 <br/> 3 dias 03:40:00</p>
     <input type="submit" value="Adicionar" />
 </form>
