--- a/application/views/scripts/projetos/listar-tarefas.phtml
+++ b/application/views/scripts/projetos/listar-tarefas.phtml
@@ -153,7 +153,7 @@
                         )
                         ); 
                 ?>" 
-                title="Adiconar"><img src="/imagens/time_clock.png"/>
+                title="Adicionar"><img src="/imagens/time_clock.png"/>
             </a></li>
 
             <li><a href="
