Modulo de mensagens(em construcao)

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -11,7 +11,7 @@
 
     <body>
         <div id="header">
-            <img src="/imagens/logo.png" width="145px" height="75px"/>
+            <img src="/imagens/logo.png" width="145" height="75"/>
             <div id="loginX">
                     <a href="#"><?= $this->usuarioLogado->nome ?></a> | <a href="/login/logout">logout</a>
                     <br><a href="#"><img src="/imagens/Brazil-icon.png"/></a>
@@ -55,8 +55,8 @@
                     </li>
                     <li><a href="telaMensagens.html">Mensagens</a>
                             <ul>
-                                    <li><a href="#nogo">Nova</a></li>
-                                    <li><a href="#nogo">Entrada</a></li>
+                                    <li><a href="/mensagens/novo">Nova</a></li>
+                                    <li><a href="/mensagens/listar">Entrada</a></li>
                             </ul>
                     </li>
                     <li><a href="telaMensagens.html">Suporte</a>
